--- a/popup.css
+++ b/popup.css
@@ -1,27 +1,38 @@
+body {
+  background-color: #f1f1f1;
+}
+
 button {
   text-transform: uppercase;
   background-image: none;
   border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box;
-  font-family: "Google Sans", Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
+  font-family: 'Google Sans', Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
   font-weight: 500;
   font-size: 14px;
   height: 36px;
   letter-spacing: 0.25px;
   line-height: 16px;
   padding: 9px 24px 11px 24px;
-  background-color: white;
+  background-color: #f1f1f1;
   border: 1px solid #dadce0 !important;
+  box-shadow: -3px 3px #c7c7c7, -2px 2px #c7c7c7, -1px 1px #c7c7c7;
   color: #202124;
   cursor: pointer;
   width: 100%;
-  transition: background-color 0.5s;
+  transition: 0.2s;
 }
 
 button:hover {
   background-color: rgba(0, 0, 255, 0.3);
   transition: background-color 0.5s;
+}
+
+button:active {
+  box-shadow: none;
+  transform: translateX(-3px) translateY(3px);
+  transition: 0.2s;
 }
 
 #valuecontainer {
@@ -71,12 +82,25 @@ button:hover {
 #reset {
   margin-top: 20px;
   width: 100%;
+  border: none;
+  outline: none;
 }
 
 #value {
   font-weight: bold;
-  color: red;
+  color: grey;
   margin-left: 2px;
+  border: 0;
+  outline: 0;
+  border-bottom: 2px solid #d3d3d3;
+  box-shadow: none;
+  transition: 0.5s;
+}
+
+#value:focus {
+  border-color: #00dd22;
+  color: #00dd22;
+  transition: 0.5s;
 }
 
 #deinitialize {
